fix: wrong graph data when updating docs: sample.yaml readme

--- a/backend/conf/sample.yaml
+++ b/backend/conf/sample.yaml
@@ -8,4 +8,10 @@ probe:
       command: "birdc show ospf state all"
     parse:
       type: "bird"
+  - fetch:
+      type: "command"
+      cmd: "birdc show ospf state all"
+    parse:
+      type: "bird"
 interval: 60
+port: 7878
