--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
     "@antv/g6": "^4.8.10",
     "axios": "^1.4.0",
     "echarts": "^5.4.2",
+    "netmask": "^2.0.2",
     "vue": "^3.2.47",
     "vue-echarts": "^6.5.5"
   },
   "devDependencies": {
+    "@types/netmask": "^2.0.1",
     "@types/node": "^20.1.1",
     "@vitejs/plugin-vue": "^4.1.0",
     "typescript": "^5.0.2",
