--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@
 # Go workspace file
 go.work
 .pnpm-debug.log
+.idea
+*testfile*
+.vscode
+backend/config.yaml
+docker-compose.yml
+backend/static
