--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-env:
-  VERSION: "${{$(date +%s)}}"
 
 jobs:
   build:
@@ -16,10 +14,12 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Build the Docker image
-        run: docker build . --tag registry.cn-shanghai.aliyuncs.com/baimeow/network_monitor:${{ env.VERSION }}
+        run: |
+          export buildtag=$(date +%s)
+          docker build . --tag registry.cn-shanghai.aliyuncs.com/baimeow/network_monitor:$buildtag
 
       - name: Push the Docker image
         timeout-minutes: 3
         run: |
           docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }} registry.cn-shanghai.aliyuncs.com
-          docker push registry.cn-shanghai.aliyuncs.com/baimeow/network_monitor:${{ env.VERSION }}
+          docker push registry.cn-shanghai.aliyuncs.com/baimeow/network_monitor:$buildtag
