--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Gen tag
+        id: gen-tag
+        run: echo "$(date +%s)" >> $GITHUB_OUTPUT
       
       - name: Build the Docker image
         run: |
-          export buildtag=$(date +%s)
-          docker build . --tag registry.cn-shanghai.aliyuncs.com/baimeow/network_monitor:$buildtag
+          docker build . --tag registry.cn-shanghai.aliyuncs.com/baimeow/network_monitor:${{ steps.gen-tag.outputs }}
 
       - name: Push the Docker image
         timeout-minutes: 3
         run: |
           docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }} registry.cn-shanghai.aliyuncs.com
-          docker push registry.cn-shanghai.aliyuncs.com/baimeow/network_monitor:$buildtag
+          docker push registry.cn-shanghai.aliyuncs.com/baimeow/network_monitor:${{ steps.gen-tag.outputs }}
