--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,12 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
+
+env:
+  DEPLOY_NAME: 'network-monitor'
+  IMAGE_REPO: 'baimeow/network_monitor'
+  IMAGE_BASE: 'registry.cn-shanghai.aliyuncs.com'
 
 jobs:
   build:
@@ -19,10 +25,27 @@ jobs:
       
       - name: Build the Docker image
         run: |
-          docker build . --tag registry.cn-shanghai.aliyuncs.com/baimeow/network_monitor:${{ steps.gen-tag.outputs.tag }}
+          docker build . --tag ${{ env.IMAGE_BASE }}/${{ env.IMAGE_REPO }}:${{ steps.gen-tag.outputs.tag }}
 
       - name: Push the Docker image
         timeout-minutes: 3
         run: |
-          docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }} registry.cn-shanghai.aliyuncs.com
-          docker push registry.cn-shanghai.aliyuncs.com/baimeow/network_monitor:${{ steps.gen-tag.outputs.tag }}
+          docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }} ${{ env.IMAGE_BASE }}
+          docker push ${{ IMAGE_REPO }}:${{ steps.gen-tag.outputs.tag }}
+        
+      - name: Checkout ArgoCD
+        uses: actions/checkout@v4
+        with:
+          repository: BaiMeow/argocd
+          token: ${{ secrets.GH_PAT }} # `GH_PAT` is a secret that contains your PAT
+          path: ../deploy
+          
+      - name: Update ArgoCD
+        run: |
+          cd ../deploy/${{ env.DEPLOY_NAME }}
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          sed -i "s|^\(\s*image: '${{ env.IMAGE_BASE }}/${{ env.IMAGE_REPO }}:\)[0-9]\+'|\1${{ steps.gen-tag.outputs.tag }}'|" ${{ DEPLOY_NAME }}-deployment.yml
+          git add .
+          git commit -m "update(${{ env.DEPLOY_NAME }}): image"
+          git push 
