--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         timeout-minutes: 3
         run: |
           docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }} ${{ env.IMAGE_BASE }}
-          docker push ${{ IMAGE_REPO }}:${{ steps.gen-tag.outputs.tag }}
+          docker push ${{ env.IMAGE_REPO }}:${{ steps.gen-tag.outputs.tag }}
         
       - name: Checkout ArgoCD
         uses: actions/checkout@v4
@@ -45,7 +45,7 @@ jobs:
           cd ../deploy/${{ env.DEPLOY_NAME }}
           git config user.name github-actions
           git config user.email github-actions@github.com
-          sed -i "s|^\(\s*image: '${{ env.IMAGE_BASE }}/${{ env.IMAGE_REPO }}:\)[0-9]\+'|\1${{ steps.gen-tag.outputs.tag }}'|" ${{ DEPLOY_NAME }}-deployment.yml
+          sed -i "s|^\(\s*image: '${{ env.IMAGE_BASE }}/${{ env.IMAGE_REPO }}:\)[0-9]\+'|\1${{ steps.gen-tag.outputs.tag }}'|" ${{ env.DEPLOY_NAME }}-deployment.yml
           git add .
           git commit -m "update(${{ env.DEPLOY_NAME }}): image"
           git push 
