--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         timeout-minutes: 3
         run: |
           docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_PASSWORD }} ${{ env.IMAGE_BASE }}
-          docker push ${{ env.IMAGE_REPO }}:${{ steps.gen-tag.outputs.tag }}
+          docker push ${{ env.IMAGE_BASE }}/${{ env.IMAGE_REPO }}:${{ steps.gen-tag.outputs.tag }}
         
       - name: Checkout ArgoCD
         uses: actions/checkout@v4
