--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v4
       
       - name: Switch to front directory
-        run: cd front
+        run: cd frontend
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
