--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Switch to front directory
         run: cd frontend
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
