--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version-file: '18'
+          cache-dependency-path: 'frontend/package.json'
           cache: 'pnpm'
 
       - name: Install dependencies and build
