ci: fix go build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Build
         run: |
           cd backend
-          go build . -o main
+          go build -o main
 
       - name: Build the Docker image
         run: |
