--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@types/netmask": "^2.0.5",
     "@types/node": "^20.16.10",
     "@vitejs/plugin-vue": "^4.6.2",
+    "prettier": "3.3.3",
     "typescript": "^5.6.2",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-element-plus": "^0.8.0",
