--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@antv/g6": "^4.8.24",
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^11.1.0",
     "axios": "^1.7.7",
     "echarts": "^5.5.1",
     "element-plus": "^2.8.4",
