--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "netmask": "^2.0.2",
     "unplugin-icons": "^0.17.4",
     "vue": "^3.5.10",
-    "vue-echarts": "^6.7.3"
+    "vue-echarts": "^6.7.3",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@iconify-json/ep": "^1.2.0",
