--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "echarts": "^5.5.1",
     "element-plus": "^2.8.4",
+    "eslint": "^9.15.0",
     "netmask": "^2.0.2",
     "unplugin-icons": "^0.17.4",
     "vue": "^3.5.10",
