--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,6 @@
     "axios": "^1.7.7",
     "echarts": "^5.5.1",
     "element-plus": "^2.8.4",
-    "eslint": "^9.15.0",
     "netmask": "^2.0.2",
     "unplugin-icons": "^0.17.4",
     "vue": "^3.5.10",
@@ -23,12 +22,17 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@iconify-json/ep": "^1.2.0",
     "@types/netmask": "^2.0.5",
     "@types/node": "^20.16.10",
     "@vitejs/plugin-vue": "^4.6.2",
+    "eslint": "^9.15.0",
+    "eslint-plugin-vue": "^9.31.0",
+    "globals": "^15.12.0",
     "prettier": "3.3.3",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.15.0",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-element-plus": "^0.8.0",
     "unplugin-vue-components": "^0.25.2",
