--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,34 +9,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@antv/g6": "^4.8.24",
-    "@element-plus/icons-vue": "^2.3.1",
-    "@vueuse/core": "^11.1.0",
-    "axios": "^1.7.7",
-    "echarts": "^5.5.1",
-    "element-plus": "^2.8.4",
+    "@element-plus/icons-vue": "^2.3.2",
+    "@vueuse/core": "^14.1.0",
+    "axios": "^1.13.2",
+    "echarts": "^6.0.0",
+    "element-plus": "^2.12.0",
     "netmask": "^2.0.2",
-    "unplugin-icons": "^0.17.4",
-    "vue": "^3.5.10",
-    "vue-echarts": "^6.7.3",
-    "vue-router": "4"
+    "unplugin-icons": "^22.5.0",
+    "vue": "^3.5.25",
+    "vue-echarts": "^8.0.1",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@iconify-json/ep": "^1.2.0",
-    "@types/netmask": "^2.0.5",
-    "@types/node": "^20.16.10",
-    "@vitejs/plugin-vue": "^4.6.2",
-    "eslint": "^9.15.0",
-    "eslint-plugin-vue": "^9.31.0",
-    "globals": "^15.12.0",
+    "@eslint/js": "^9.39.2",
+    "@iconify-json/ep": "^1.2.3",
+    "@types/netmask": "^2.0.6",
+    "@types/node": "^25.0.1",
+    "@vitejs/plugin-vue": "^6.0.3",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.6.2",
+    "globals": "^16.5.0",
     "prettier": "3.3.3",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.15.0",
-    "unplugin-auto-import": "^0.16.7",
-    "unplugin-element-plus": "^0.8.0",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.5.5",
-    "vue-tsc": "^2.1.6"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.49.0",
+    "unplugin-auto-import": "^20.3.0",
+    "unplugin-element-plus": "^0.11.1",
+    "unplugin-vue-components": "^30.0.0",
+    "vite": "^7.2.7",
+    "vue-tsc": "^3.1.8"
   }
 }
